# convene-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: ddd60b812f8a_initial_schema.py
charts/stt/: Chart.yaml  values.yaml
charts/stt/templates/: deployment.yaml  ingress.yaml
claude_docs/: DGX_Spark_Reference.md
claude_projects/2026-02-27/: 2_LocalProviders_End.md  3_WhisperSTT_DGX_End.md  3_WhisperSTT_DGX_Start.md
docs/: COMPETITIVE_ANALYSIS.md  DAILY_BRIEF.md  GO_TO_MARKET.md  HANDOFF.md  PROGRESS.md  README.md  ROADMAP-TASKLIST.md  ROADMAP.md  SETUP_GUIDE.md  TASKLIST.md  VISION.md  WEEKLY_REVIEW.md
docs/cowork-tasks/: README.md  daily-build.md  daily-review.md  weekly-architecture-review.md
services/api-server/: pyproject.toml
services/api-server/src/api_server/: __init__.py  deps.py  main.py  middleware.py
services/api-server/src/api_server/routes/: agents.py  health.py  meetings.py  tasks.py
services/audio-service/: pyproject.toml
services/audio-service/src/audio_service/: __init__.py  audio_pipeline.py  main.py  meeting_dialer.py  twilio_handler.py
services/task-engine/: pyproject.toml
services/task-engine/src/task_engine/: __init__.py  main.py
services/worker/: pyproject.toml
services/worker/src/worker/: __init__.py  calendar_sync.py  main.py  notifications.py  slack_bot.py
