[project]
name = "convene-ai"
version = "0.1.0"
description = "Voice-first AI agent that dials into meetings, extracts tasks, and reports progress"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/convene-core",
    "packages/convene-providers",
    "packages/convene-memory",
    "services/api-server",
    "services/audio-service",
    "services/task-engine",
    "services/worker",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15.4",
]

[tool.hatch.build.targets.wheel]
packages = []
